# fari-twin-toolkit

./: .gitignore  .prettierignore  PUBLISHING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.changeset/: config.json
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
apps/air-quality/: README.md  index.html  package.json  vite.config.ts
apps/air-quality/src/: App.vue  main.ts  state.ts  styles.css
apps/brussels-twin/: .gitignore  README.md  index.html  package.json  vite.config.ts
apps/brussels-twin/scripts/: import-brussels-data.mjs
apps/brussels-twin/src/: App.vue  state.ts  styles.css
apps/digital-twin/: .env.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/digital-twin/src/: env.d.ts  main.ts  style.css
apps/docs/: index.md  package.json
apps/docs/.vitepress/: config.ts
apps/docs/guide/: architecture.md  end-to-end.md  getting-started.md  introduction.md  nuxt-setup.md
apps/playground/: README.md  index.html  package.json  vite.config.ts
apps/playground/src/: App.vue  ComponentsView.vue  main.ts  (+4 more)
python/: README.md
python/pipeline-core/: README.md  pyproject.toml
python/pipeline-core/fari_pipeline_core/: __init__.py  pipeline.py
python/pipeline-core/tests/: test_pipeline.py
python/pipeline-service/: README.md  pyproject.toml
python/pipeline-service/fari_pipeline_service/: __init__.py  service.py  store.py
python/pipeline-service/tests/: test_service.py
python/twin-types/: README.md  generate.sh  pyproject.toml
specs/: openapi.yaml
(+75 files in other folders)
