[project]
name = "fari-pipeline-core"
version = "0.1.0"
description = "Step orchestration for long-running analysis pipelines (FARI Twin Toolkit)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fari_pipeline_core"]

[dependency-groups]
dev = ["pytest>=8"]
