[project]
name = "fari-pipeline-service"
version = "0.1.0"
description = "FastAPI template for FARI long-running analysis pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.7",
  "fari-pipeline-core",
  "fari-twin-types",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fari_pipeline_service"]

[tool.uv.sources]
fari-pipeline-core = { path = "../pipeline-core" }
fari-twin-types = { path = "../twin-types" }

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]
